--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,2 @@
 server.port=8800
-
-# Gives us access to the H2 database web console
-spring.h2.console.enabled=true
-# Generates the database *only* if it's not there yet
-spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=dev
