--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
 			<version>3.0.0</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.fluttercode.datafactory</groupId>
+			<artifactId>datafactory</artifactId>
+			<version>0.8</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
